[gd_scene load_steps=9 format=3 uid="uid://itempickup123"]

[ext_resource type="Script" path="res://scripts/item_pickup.gd" id="1_script"]
[ext_resource type="AudioStream" path="res://assets/sound/pickup3.ogg" id="3_audio"]

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.7)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.5)

[sub_resource type="Gradient" id="Gradient_2"]
offsets = PackedFloat32Array(0, 0.92, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2"]
gradient = SubResource("Gradient_2")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 10.0

[sub_resource type="Curve" id="Curve_1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.5, 0.0, 0, 0]
point_count = 2

[node name="ItemPickup" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_script")

[node name="Backing" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("GradientTexture2D_2")

[node name="Glow" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_1")
modulate = Color(1, 1, 1, 0.9)

[node name="IconAnchor" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 8
lifetime = 0.5
one_shot = true
explosiveness = 0.8
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_1")
color = Color(1, 0.9, 0.2, 1)

[node name="PickupSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_audio")
bus = &"SFX"

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_1")
